# civ6-bridge

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
civ6_mod/: civ6_bridge.modinfo
civ6_mod/Scripts/: agent_commands.lua  event_hooks.lua  game_state.lua  json.lua  utils.lua
docs/: index.md  installation.md  usage.md
src/civ6_bridge/: __init__.py  civ6_bridge.py  cli.py  commands.py  constants.py  exceptions.py  game_state.py  log_parser.py  log_watcher.py  models.py  tuner_client.py  utils.py
tests/: __init__.py  test_civ6_bridge.py  test_commands.py  test_game_state.py  test_log_parser.py  test_models.py  test_tuner_client.py
tests/fixtures/: sample_game_state.json  sample_lua_log.txt
